// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionHashView.vue [type: account, env: Dev]: should be rendered correctly 1`] = `
<div
  class="s-input-container"
>
  <s-input-stub
    accept=""
    autocomplete="off"
    borderradius="small"
    form=""
    label=""
    name=""
    placeholder=""
    prefix=""
    readonly="true"
    size="big"
    suffix=""
    tabindex=""
    type="text"
    usedesignsystem="true"
    value="0xB8c77482e4...52C74426C6D7"
  />
   
  <s-button-stub
    alternative="true"
    borderradius="small"
    class="s-button--copy"
    icon="basic-copy-24"
    iconposition="left"
    nativetype="button"
    size="medium"
    tabindex="0"
    tooltip=""
    tooltipplacement="top"
    type="action"
    usedesignsystem="true"
  />
   
  <s-dropdown-stub
    borderradius="mini"
    buttontype="secondary"
    class="s-dropdown-menu"
    hideonclick="true"
    hidetimeout="150"
    icon="basic-more-vertical-24"
    placement="bottom-end"
    showtimeout="250"
    size="medium"
    tabindex="0"
    trigger="hover"
    type="ellipsis"
  >
    <template>
      <a
        class="transaction-link"
        href="https://explorer.s2.dev.sora2.soramitsu.co.jp/sora-dev/account/0xB8c77482e45F1F4d123DeRwQ5F52C74426C6D7"
        rel="nofollow noopener"
        target="_blank"
      >
        <s-dropdown-item-stub
          class="s-dropdown-menu__item"
        >
          
          
        
        </s-dropdown-item-stub>
      </a>
    </template>
  </s-dropdown-stub>
</div>
`;

exports[`TransactionHashView.vue [type: account, env: Prod]: should be rendered correctly 1`] = `
<div
  class="s-input-container"
>
  <s-input-stub
    accept=""
    autocomplete="off"
    borderradius="small"
    form=""
    label=""
    name=""
    placeholder=""
    prefix=""
    readonly="true"
    size="big"
    suffix=""
    tabindex=""
    type="text"
    usedesignsystem="true"
    value="0xB8c77482e4...52C74426C6D7"
  />
   
  <s-button-stub
    alternative="true"
    borderradius="small"
    class="s-button--copy"
    icon="basic-copy-24"
    iconposition="left"
    nativetype="button"
    size="medium"
    tabindex="0"
    tooltip=""
    tooltipplacement="top"
    type="action"
    usedesignsystem="true"
  />
   
  <s-dropdown-stub
    borderradius="mini"
    buttontype="secondary"
    class="s-dropdown-menu"
    hideonclick="true"
    hidetimeout="150"
    icon="basic-more-vertical-24"
    placement="bottom-end"
    showtimeout="250"
    size="medium"
    tabindex="0"
    trigger="hover"
    type="ellipsis"
  >
    <template>
      <a
        class="transaction-link"
        href="https://sorascan.com/sora-mainnet/account/0xB8c77482e45F1F4d123DeRwQ5F52C74426C6D7"
        rel="nofollow noopener"
        target="_blank"
      >
        <s-dropdown-item-stub
          class="s-dropdown-menu__item"
        >
          
          
        
        </s-dropdown-item-stub>
      </a>
      <a
        class="transaction-link"
        href="https://sora.subscan.io/account/0xB8c77482e45F1F4d123DeRwQ5F52C74426C6D7"
        rel="nofollow noopener"
        target="_blank"
      >
        <s-dropdown-item-stub
          class="s-dropdown-menu__item"
        >
          
          
        
        </s-dropdown-item-stub>
      </a>
    </template>
  </s-dropdown-stub>
</div>
`;

exports[`TransactionHashView.vue [type: block, env: Dev]: should be rendered correctly 1`] = `
<div
  class="s-input-container"
>
  <s-input-stub
    accept=""
    autocomplete="off"
    borderradius="small"
    form=""
    label=""
    name=""
    placeholder=""
    prefix=""
    readonly="true"
    size="big"
    suffix=""
    tabindex=""
    type="text"
    usedesignsystem="true"
    value="0xB8c77482e4...52C74426C6D7"
  />
   
  <s-button-stub
    alternative="true"
    borderradius="small"
    class="s-button--copy"
    icon="basic-copy-24"
    iconposition="left"
    nativetype="button"
    size="medium"
    tabindex="0"
    tooltip=""
    tooltipplacement="top"
    type="action"
    usedesignsystem="true"
  />
   
  <s-dropdown-stub
    borderradius="mini"
    buttontype="secondary"
    class="s-dropdown-menu"
    hideonclick="true"
    hidetimeout="150"
    icon="basic-more-vertical-24"
    placement="bottom-end"
    showtimeout="250"
    size="medium"
    tabindex="0"
    trigger="hover"
    type="ellipsis"
  >
    <template>
      <a
        class="transaction-link"
        href="https://explorer.s2.dev.sora2.soramitsu.co.jp/sora-dev/block/0xB8c77482e45F1F4d123DeRwQ5F52C74426C6D7"
        rel="nofollow noopener"
        target="_blank"
      >
        <s-dropdown-item-stub
          class="s-dropdown-menu__item"
        >
          
          
        
        </s-dropdown-item-stub>
      </a>
    </template>
  </s-dropdown-stub>
</div>
`;

exports[`TransactionHashView.vue [type: block, env: Prod]: should be rendered correctly 1`] = `
<div
  class="s-input-container"
>
  <s-input-stub
    accept=""
    autocomplete="off"
    borderradius="small"
    form=""
    label=""
    name=""
    placeholder=""
    prefix=""
    readonly="true"
    size="big"
    suffix=""
    tabindex=""
    type="text"
    usedesignsystem="true"
    value="0xB8c77482e4...52C74426C6D7"
  />
   
  <s-button-stub
    alternative="true"
    borderradius="small"
    class="s-button--copy"
    icon="basic-copy-24"
    iconposition="left"
    nativetype="button"
    size="medium"
    tabindex="0"
    tooltip=""
    tooltipplacement="top"
    type="action"
    usedesignsystem="true"
  />
   
  <s-dropdown-stub
    borderradius="mini"
    buttontype="secondary"
    class="s-dropdown-menu"
    hideonclick="true"
    hidetimeout="150"
    icon="basic-more-vertical-24"
    placement="bottom-end"
    showtimeout="250"
    size="medium"
    tabindex="0"
    trigger="hover"
    type="ellipsis"
  >
    <template>
      <a
        class="transaction-link"
        href="https://sorascan.com/sora-mainnet/block/0xB8c77482e45F1F4d123DeRwQ5F52C74426C6D7"
        rel="nofollow noopener"
        target="_blank"
      >
        <s-dropdown-item-stub
          class="s-dropdown-menu__item"
        >
          
          
        
        </s-dropdown-item-stub>
      </a>
      <a
        class="transaction-link"
        href="https://sora.subscan.io/block/0xB8c77482e45F1F4d123DeRwQ5F52C74426C6D7"
        rel="nofollow noopener"
        target="_blank"
      >
        <s-dropdown-item-stub
          class="s-dropdown-menu__item"
        >
          
          
        
        </s-dropdown-item-stub>
      </a>
    </template>
  </s-dropdown-stub>
</div>
`;

exports[`TransactionHashView.vue [type: id, env: Dev]: should be rendered correctly 1`] = `
<div
  class="s-input-container"
>
  <s-input-stub
    accept=""
    autocomplete="off"
    borderradius="small"
    form=""
    label=""
    name=""
    placeholder=""
    prefix=""
    readonly="true"
    size="big"
    suffix=""
    tabindex=""
    type="text"
    usedesignsystem="true"
    value="0xB8c77482e4...52C74426C6D7"
  />
   
  <s-button-stub
    alternative="true"
    borderradius="small"
    class="s-button--copy"
    icon="basic-copy-24"
    iconposition="left"
    nativetype="button"
    size="medium"
    tabindex="0"
    tooltip=""
    tooltipplacement="top"
    type="action"
    usedesignsystem="true"
  />
   
  <s-dropdown-stub
    borderradius="mini"
    buttontype="secondary"
    class="s-dropdown-menu"
    hideonclick="true"
    hidetimeout="150"
    icon="basic-more-vertical-24"
    placement="bottom-end"
    showtimeout="250"
    size="medium"
    tabindex="0"
    trigger="hover"
    type="ellipsis"
  >
    <template>
      <a
        class="transaction-link"
        href="https://explorer.s2.dev.sora2.soramitsu.co.jp/sora-dev/transaction/0xB8c77482e45F1F4d123DeRwQ5F52C74426C6D7"
        rel="nofollow noopener"
        target="_blank"
      >
        <s-dropdown-item-stub
          class="s-dropdown-menu__item"
        >
          
          
        
        </s-dropdown-item-stub>
      </a>
    </template>
  </s-dropdown-stub>
</div>
`;

exports[`TransactionHashView.vue [type: id, env: Prod]: should be rendered correctly 1`] = `
<div
  class="s-input-container"
>
  <s-input-stub
    accept=""
    autocomplete="off"
    borderradius="small"
    form=""
    label=""
    name=""
    placeholder=""
    prefix=""
    readonly="true"
    size="big"
    suffix=""
    tabindex=""
    type="text"
    usedesignsystem="true"
    value="0xB8c77482e4...52C74426C6D7"
  />
   
  <s-button-stub
    alternative="true"
    borderradius="small"
    class="s-button--copy"
    icon="basic-copy-24"
    iconposition="left"
    nativetype="button"
    size="medium"
    tabindex="0"
    tooltip=""
    tooltipplacement="top"
    type="action"
    usedesignsystem="true"
  />
   
  <s-dropdown-stub
    borderradius="mini"
    buttontype="secondary"
    class="s-dropdown-menu"
    hideonclick="true"
    hidetimeout="150"
    icon="basic-more-vertical-24"
    placement="bottom-end"
    showtimeout="250"
    size="medium"
    tabindex="0"
    trigger="hover"
    type="ellipsis"
  >
    <template>
      <a
        class="transaction-link"
        href="https://sorascan.com/sora-mainnet/transaction/0xB8c77482e45F1F4d123DeRwQ5F52C74426C6D7"
        rel="nofollow noopener"
        target="_blank"
      >
        <s-dropdown-item-stub
          class="s-dropdown-menu__item"
        >
          
          
        
        </s-dropdown-item-stub>
      </a>
      <a
        class="transaction-link"
        href="https://sora.subscan.io/extrinsic/0xB8c77482e45F1F4d123DeRwQ5F52C74426C6D7"
        rel="nofollow noopener"
        target="_blank"
      >
        <s-dropdown-item-stub
          class="s-dropdown-menu__item"
        >
          
          
        
        </s-dropdown-item-stub>
      </a>
    </template>
  </s-dropdown-stub>
</div>
`;
